--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dash-table==5.0.0
 Flask==2.2.2
 Flask-Compress==1.12
 importlib-metadata==4.12.0
+iota-client-python==0.2.0a26
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
