--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,17 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.23.2
+packaging==21.3
 pandas==1.4.4
+patsy==0.5.2
 plotly==5.10.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.2.1
+scipy==1.9.1
 six==1.16.0
+statsmodels==0.13.2
 tenacity==8.0.1
 Werkzeug==2.2.2
 zipp==3.8.1
+zope.interface==5.4.0
